re commit conflict 2

--- a/html/CM1.html
+++ b/html/CM1.html
@@ -122,7 +122,7 @@ $(document).ready(function () {
 <hr />
 <div id="axiome-des-probabilites" class="section level4">
 <h4>Axiome des probabilités</h4>
-<p>En <a href="https://fr.wikipedia.org/wiki/Probabilit%C3%A9">théorie des probabilités</a>, l’ensemble des éventualités <span class="math">\(\Omega\)</span> est appelé l’<em>ensemble fondamental</em>. En général, on ne le décrit pas. Cet ensemble est muni d’une <a href="https://fr.wikipedia.org/wiki/Tribu_(math%C3%A9matiques)">tribu</a> <span class="math">\({\cal A}\)</span> contenant sous-ensembles de <span class="math">\(\Omega\)</span> appelés {}.</p>
+<p>En <a href="https://fr.wikipedia.org/wiki/Probabilit%C3%A9">théorie des probabilités</a>, l’ensemble des éventualités <span class="math">\(\Omega\)</span> est appelé l’<em>ensemble fondamental</em>. En général, on ne le décrit pas. Cet ensemble est muni d’une <a href="https://fr.wikipedia.org/wiki/Tribu_(math%C3%A9matiques)">tribu</a> <span class="math">\({\cal A}\)</span> contenant sous-ensembles de <span class="math">\(\Omega\)</span> appelés <em>événements</em>.</p>
 <hr />
 <div id="mesure-de-probabilite" class="section level5">
 <h5>Mesure de probabilité</h5>
@@ -146,11 +146,7 @@ $(document).ready(function () {
 <div id="probabilite-conditionnelle" class="section level5">
 <h5>Probabilité conditionnelle</h5>
 <p>Soit <span class="math">\(B\)</span> un événement de probabilité P<span class="math">\((B) &gt; 0\)</span>. On note P<span class="math">\((A|B)\)</span> la probabilité conditionnelle de <span class="math">\(A\)</span> sachant <span class="math">\(B\)</span></p>
-<<<<<<< HEAD
-<p><span class="math">\[ {\rm P}(A~|~B) = \frac{ {\rm P}(A \cap B)}{ {\rm P}(B)} \, . \]</span></p>
-=======
-<p><span class="math">\[ {\rm P}(A~|~B) = \frac{{\rm P}(A \cap B)}{{\rm P}(B)} \, . \]</span></p>
->>>>>>> 25a88b0326c33dd891f5ebeca88fdb940c51ada9
+<p><span class="math">\[ {\rm P}(A~|~B) = \frac{ {\rm P}(A \cap B) }{ {\rm P}(B) } \, . \]</span></p>
 <p>On dit que <span class="math">\(A\)</span> et <span class="math">\(B\)</span> sont indépendants si</p>
 <p><span class="math">\[ {\rm P}(A~|~B) = {\rm P}(A) \, . \]</span></p>
 <hr />
