--- a/html/CM4.html
+++ b/html/CM4.html
@@ -128,7 +128,7 @@ $(document).ready(function () {
 \]</span></p>
 <hr />
 <div id="loi-de-poisson" class="section level5">
-<h5>Loi de Poisson</h5>
+<h5><a href="https://fr.wikipedia.org/wiki/Loi_de_Poisson">Loi de Poisson</a></h5>
 <p>Soit <span class="math">\(\lambda &gt;0\)</span>. La loi de Poisson est caractérisée par<br /><span class="math">\[
 {\rm P}(X = n) = \frac{\lambda^n}{n!} e^{-\lambda} \, , \quad n \geq 0. 
 \]</span></p>
