mise a jour des posts TD-3

--- a/_posts/2016-7-1-TD-1-Première-Partie.html
+++ b/_posts/2016-7-1-TD-1-Première-Partie.html
@@ -121,7 +121,7 @@ $(document).ready(function () {
 
 <hr />
 <div id="questions-de-cours" class="section level4">
-<h4>Questions de cours</h4>
+<h4><a href="http://francoio.github.io/html/CM1.html">Questions de cours</a></h4>
 <ul>
 <li><p>Rappeler la définition d’une mesure de probabilité.</p></li>
 <li><p>Rappeler la définition d’une suite croissante d’événements.</p></li>
@@ -165,11 +165,11 @@ x &lt;- -log(runif(n))</code></pre>
 <li>Calculer la fréquence de l’événement <span class="math">\(X &gt; 1\)</span> et comparer cette valeur empirique à la valeur théorique calculée dans la question 1. Idem pour la probabilité de l’événement <span class="math">\((\sin(X)&gt;0)\)</span>.</li>
 </ul>
 <pre class="r"><code>mean(x &gt; 1)</code></pre>
-<pre><code>## [1] 0.367985</code></pre>
+<pre><code>## [1] 0.368215</code></pre>
 <pre class="r"><code>exp(-1)</code></pre>
 <pre><code>## [1] 0.3678794</code></pre>
 <pre class="r"><code>mean(sin(x) &gt; 0)</code></pre>
-<pre><code>## [1] 0.958534</code></pre>
+<pre><code>## [1] 0.958537</code></pre>
 </div>
 </div>
 
