--- a/_posts/2016-7-4-TD-3-Première-Partie.html
+++ b/_posts/2016-7-4-TD-3-Première-Partie.html
@@ -138,7 +138,7 @@ $(document).ready(function () {
 </div>
 <div id="exercice-2" class="section level4">
 <h4>Exercice 2</h4>
-<p>Erwin a un chat probabiliste. On suppose que le chat d’Erwin prend une et une seule décision par jour parmi les 4 possibilités suivantes : rester à l’intérieur de la maison, sortir à l’extérieur, rester à l’extérieur, rentrer à l’intérieur.</p>
+<p>Erwin a un <a href="https://fr.wikipedia.org/wiki/Chat_de_Schr%C3%B6dinger">chat</a> probabiliste. On suppose que le chat d’Erwin prend une et une seule décision par jour parmi les 4 possibilités suivantes : rester à l’intérieur de la maison, sortir à l’extérieur, rester à l’extérieur, rentrer à l’intérieur.</p>
 <p>La décision quotidienne est prise à minuit (0h00). Lorsqu’il se trouve à l’intérieur, le chat d’Erwin sort avec la probabilité <span class="math">\(p\)</span>. Lorsqu’il se trouve dehors, il rentre avec la probabilité <span class="math">\(q\)</span> (<span class="math">\(0&lt;p,q&lt;1\)</span>). Le 31 d'ecembre 2015, considéré comme le jour zéro de l’année 2016, Erwin et son chat sont à l’intérieur de la maison.</p>
 <div id="question-1" class="section level5">
 <h5>Question 1</h5>
