--- a/_posts/2016-7-3-TD-2-Deuxième-Partie.html
+++ b/_posts/2016-7-3-TD-2-Deuxième-Partie.html
@@ -120,10 +120,10 @@ $(document).ready(function () {
 
 
 <hr />
-<div id="exercice-2" class="section level4">
-<h4>Exercice 2</h4>
+<div id="exercice-1" class="section level4">
+<h4>Exercice 1</h4>
 <p>Un jeu nécessite le lancer d’un dé équilibré à 19 faces. Pour jouer à ce jeu, on dispose uniquement d’un dé à six faces que l’on peut lancer un nombre arbitraire de fois. On définit le coût du jeu comme le nombre moyen de lancers du dé à six faces permettant d’obtenir une réalisation de loi uniforme sur l’ensemble <span class="math">\(\{1,\dots,19 \}\)</span>.</p>
-<p><em>Rappel : Théorème de la division euclidienne pour les entiers naturels</em>. Soit <span class="math">\(a\)</span> et <span class="math">\(b\)</span> deux entiers naturels tels que <span class="math">\(b\)</span> est non nul. Il existe un unique couple d’entiers naturels <span class="math">\((q, r)\)</span> satisfaisant <span class="math">\(a = bq + r\)</span> et <span class="math">\(r&lt;b\)</span>.</p>
+<p>Rappel : <a href="https://fr.wikipedia.org/wiki/Division_euclidienne">Théorème de la division euclidienne pour les entiers naturels</a>. Soit <span class="math">\(a\)</span> et <span class="math">\(b\)</span> deux entiers naturels tels que <span class="math">\(b\)</span> est non nul. Il existe un unique couple d’entiers naturels <span class="math">\((q, r)\)</span> satisfaisant <span class="math">\(a = bq + r\)</span> et <span class="math">\(r&lt;b\)</span>.</p>
 <div id="question-1" class="section level5">
 <h5>Question 1</h5>
 <p>Soit <span class="math">\(x\)</span> un entier compris entre 1 et 36. Montrer qu’il existe un unique couple <span class="math">\((q^\star, r^\star) \in \{1,\dots,6\}^2\)</span> satisfaisant <span class="math">\[
@@ -150,7 +150,7 @@ de.19 &lt;- function(n){
 n = 100000
 system.time(de.19(n))</code></pre>
 <pre><code>##    user  system elapsed 
-##  35.797   1.576  37.503</code></pre>
+##  36.630   1.552  38.352</code></pre>
 </div>
 <div id="question-3" class="section level5">
 <h5>Question 3</h5>
