--- a/_posts/2016-7-4-TD-3-Deuxième-Partie.html
+++ b/_posts/2016-7-4-TD-3-Deuxième-Partie.html
@@ -121,62 +121,34 @@ $(document).ready(function () {
 
 <hr />
 <div id="questions-de-cours" class="section level4">
-<h4>Questions de cours</h4>
+<h4><a href="http://francoio.github.io/html/CM3.html">Questions de cours</a></h4>
 <ul>
-<li><p>Rappeler la définition d’une variable aléatoire de Bernoulli, d’une variable étagée</p></li>
+<li><p>Rappeler la définition d’une variable aléatoire de Bernoulli, d’une variable aléatoire étagée. Quelle est l’espérance de ces variables aléatoires ?</p></li>
 <li><p>Rappeler la définition de la <a href="https://fr.wikipedia.org/wiki/Loi_de_Poisson">loi de Poisson</a> de paramètre <span class="math">\(\lambda &gt;0\)</span>.</p></li>
 <li><p>Rappeler l’espérance de la loi de Poisson.</p></li>
 </ul>
 <hr />
 </div>
-<div id="exercice-3" class="section level4">
-<h4>Exercice 3</h4>
-<p>Au <a href="https://fr.wikipedia.org/wiki/Lois_du_jeu">football</a>, on peut normalement marquer des points de la tête ou du pied. On suppose que le nombre de points marqués lors d’une partie est un nombre aléatoire <span class="math">\(K\)</span> tiré suivant la loi de Poisson de paramètre <span class="math">\(\lambda &gt;0\)</span>.</p>
-<p>La probabilité pour qu’un point soit marqué de la tête est <span class="math">\(p\)</span>, <span class="math">\(0 &lt; p &lt; 1\)</span>, et on suppose que les points sont marqués indépendamment les uns des autres.</p>
-<div id="question-1" class="section level5">
-<h5>Question 1</h5>
-<ul>
-<li>Sachant que <span class="math">\(K = k\)</span> points ont été marqués lors d’une partie, montrer que la probabilité conditionnelle pour que <span class="math">\(L = \ell\)</span> points soient marqués de la tête est <span class="math">\[
-{\rm P} (L = \ell ~|~ K = k ) = \frac{k!}{\ell! (k - \ell)!} p^\ell (1 - p)^{k - \ell} , \quad \ell = 0, \dots, k
-\]</span></li>
-</ul>
-</div>
-<div id="question-2" class="section level5">
-<h5>Question 2</h5>
-<ul>
-<li><p>En déduire la probabilité que l’on observe <span class="math">\(L = \ell\)</span> points marqués de la tête lors d’une partie.</p></li>
-<li><p>Calculer l’espérance de <span class="math">\(L\)</span>.</p></li>
-</ul>
-</div>
-<div id="question-3" class="section level5">
-<h5>Question 3</h5>
-<p>En fait, le modèle est imparfait et il existe une probabilité <span class="math">\(\epsilon&gt;0\)</span> pour qu’un point soit <a href="https://es.wikipedia.org/wiki/La_mano_de_Dios">marqué de la main</a>.</p>
-<ul>
-<li>Quelle est la probabilité d’observer au moins un point marqué de la main lors d’une partie ?</li>
-</ul>
-<hr />
-</div>
-</div>
-<div id="exercice-4" class="section level4">
-<h4>Exercice 4</h4>
+<div id="exercice-1" class="section level4">
+<h4>Exercice 1</h4>
 <p>On joue à pile (P) ou face (F) avec une pièce équilibrée <span class="math">\(n\)</span> fois de suite. On définit <span class="math">\(X_n\)</span> comme le nombre de fois où l’on obtient le <a href="http://www.lifl.fr/~jdelahay/pls/213.pdf">motif FF</a> (compté avec les recouvrements). Par exemple, dans la réalisation suivante,</p>
 <p>FFPFPFFFPFFPF</p>
 <p>nous avons <span class="math">\(n = 13\)</span> et <span class="math">\(X_n = 4\)</span>. En effet, le motif FFF contribue deux fois au nombre total. Pour <span class="math">\(i = 1, \dots, n\)</span>, on note FF<span class="math">\(_i\)</span> l’événement “le motif FF apparaît à l’issue du lancer <span class="math">\(i\)</span>”.</p>
-<div id="question-1-1" class="section level5">
+<div id="question-1" class="section level5">
 <h5>Question 1</h5>
 <ul>
 <li>Montrer que les événements (FF<span class="math">\(_i\)</span>) ne sont pas indépendants.</li>
 </ul>
 </div>
-<div id="question-2-1" class="section level5">
+<div id="question-2" class="section level5">
 <h5>Question 2</h5>
 <ul>
 <li><p>Décrire <span class="math">\(X_n\)</span> comme une variable étagée.</p></li>
-<li><p>En déduire E[<span class="math">\(X_n\)</span>]</p></li>
+<li><p>En déduire la valeur de l’espérance E[<span class="math">\(X_n\)</span>].</p></li>
 <li><p>Justifier que la loi de <span class="math">\(X_n\)</span> n’est pas la loi binomiale.</p></li>
 </ul>
 </div>
-<div id="question-3-1" class="section level5">
+<div id="question-3" class="section level5">
 <h5>Question 3</h5>
 <p>Soit <span class="math">\((f_n)\)</span> la <a href="https://fr.wikipedia.org/wiki/Suite_de_Fibonacci">suite de Fibonacci</a> définie par <span class="math">\(f_n = f_{n-1} + f_{n-2}\)</span>, <span class="math">\(n\geq 4\)</span>, et initialisée par <span class="math">\(f_2 = 3\)</span> et <span class="math">\(f_3 = 5\)</span></p>
 <ul>
@@ -184,6 +156,35 @@ $(document).ready(function () {
 </ul>
 <p><span class="math">\[{\rm P}( X_n = 0 ) =  f_n/2^n ,\quad n \geq 2 \]</span></p>
 <p><em>Indication:</em> On appliquera la <a href="https://fr.wikipedia.org/wiki/Formule_des_probabilit%C3%A9s_totales">formule des probabilités totales</a> deux fois de suite (en prenant pour mesure de référence une mesure de probabilité conditionnelle).</p>
+<hr />
+</div>
+</div>
+<div id="exercice-2" class="section level4">
+<h4>Exercice 2</h4>
+<p>Au <a href="https://fr.wikipedia.org/wiki/Lois_du_jeu">football</a>, on peut normalement marquer des buts de la tête ou du pied. On suppose que le nombre de buts marqués lors d’une partie est un nombre aléatoire <span class="math">\(K\)</span> tiré suivant la loi de Poisson de paramètre <span class="math">\(\lambda &gt;0\)</span>.</p>
+<p>La probabilité pour qu’un but soit marqué de la tête est <span class="math">\(p\)</span>, <span class="math">\(0 &lt; p &lt; 1\)</span>, et on suppose que les buts sont marqués indépendamment les uns des autres.</p>
+<div id="question-1-1" class="section level5">
+<h5>Question 1</h5>
+<ul>
+<li>Sachant que <span class="math">\(K = k\)</span> buts ont été marqués lors d’une partie, montrer que la probabilité conditionnelle pour que <span class="math">\(L = \ell\)</span> buts soient marqués de la tête est <span class="math">\[
+{\rm P} (L = \ell ~|~ K = k ) = \frac{k!}{\ell! (k - \ell)!} p^\ell (1 - p)^{k - \ell} , \quad \ell = 0, \dots, k
+\]</span></li>
+</ul>
+</div>
+<div id="question-2-1" class="section level5">
+<h5>Question 2</h5>
+<ul>
+<li><p>En déduire la probabilité que l’on observe <span class="math">\(L = \ell\)</span> buts marqués de la tête lors d’une partie.</p></li>
+<li><p>Calculer l’espérance de la variable aléatoire <span class="math">\(L\)</span>.</p></li>
+</ul>
+</div>
+<div id="question-3-1" class="section level5">
+<h5>Question 3</h5>
+<p>En fait, le modèle est imparfait et il existe une probabilité <span class="math">\(\epsilon&gt;0\)</span> pour qu’un but soit <a href="https://es.wikipedia.org/wiki/La_mano_de_Dios">marqué de la main</a>.</p>
+<ul>
+<li>Quelle est la probabilité d’observer au moins un but marqué de la main lors d’une partie ?</li>
+</ul>
+<hr />
 </div>
 </div>
 
