--- a/_posts/2016-7-4-TD-3-Deuxième-Partie.html
+++ b/_posts/2016-7-4-TD-3-Deuxième-Partie.html
@@ -123,9 +123,7 @@ $(document).ready(function () {
 <div id="questions-de-cours" class="section level4">
 <h4><a href="http://francoio.github.io/html/CM3.html">Questions de cours</a></h4>
 <ul>
-<li><p>Rappeler la définition d’une variable aléatoire de Bernoulli, d’une variable aléatoire étagée. Quelle est l’espérance de ces variables aléatoires ?</p></li>
-<li><p>Rappeler la définition de la <a href="https://fr.wikipedia.org/wiki/Loi_de_Poisson">loi de Poisson</a> de paramètre <span class="math">\(\lambda &gt;0\)</span>.</p></li>
-<li><p>Rappeler l’espérance de la loi de Poisson.</p></li>
+<li>Rappeler la définition d’une variable aléatoire de Bernoulli, d’une variable aléatoire étagée. Quelle est l’espérance de ces variables aléatoires ?</li>
 </ul>
 <hr />
 </div>
@@ -155,35 +153,7 @@ $(document).ready(function () {
 <li>En raisonnant par récurrence, démontrer que</li>
 </ul>
 <p><span class="math">\[{\rm P}( X_n = 0 ) =  f_n/2^n ,\quad n \geq 2 \]</span></p>
-<p><em>Indication:</em> On appliquera la <a href="https://fr.wikipedia.org/wiki/Formule_des_probabilit%C3%A9s_totales">formule des probabilités totales</a> deux fois de suite (en prenant pour mesure de référence une mesure de probabilité conditionnelle).</p>
-<hr />
-</div>
-</div>
-<div id="exercice-2" class="section level4">
-<h4>Exercice 2</h4>
-<p>Au <a href="https://fr.wikipedia.org/wiki/Lois_du_jeu">football</a>, on peut normalement marquer des buts de la tête ou du pied. On suppose que le nombre de buts marqués lors d’une partie est un nombre aléatoire <span class="math">\(K\)</span> tiré suivant la loi de Poisson de paramètre <span class="math">\(\lambda &gt;0\)</span>.</p>
-<p>La probabilité pour qu’un but soit marqué de la tête est <span class="math">\(p\)</span>, <span class="math">\(0 &lt; p &lt; 1\)</span>, et on suppose que les buts sont marqués indépendamment les uns des autres.</p>
-<div id="question-1-1" class="section level5">
-<h5>Question 1</h5>
-<ul>
-<li>Sachant que <span class="math">\(K = k\)</span> buts ont été marqués lors d’une partie, montrer que la probabilité conditionnelle pour que <span class="math">\(L = \ell\)</span> buts soient marqués de la tête est <span class="math">\[
-{\rm P} (L = \ell ~|~ K = k ) = \frac{k!}{\ell! (k - \ell)!} p^\ell (1 - p)^{k - \ell} , \quad \ell = 0, \dots, k
-\]</span></li>
-</ul>
-</div>
-<div id="question-2-1" class="section level5">
-<h5>Question 2</h5>
-<ul>
-<li><p>En déduire la probabilité que l’on observe <span class="math">\(L = \ell\)</span> buts marqués de la tête lors d’une partie.</p></li>
-<li><p>Calculer l’espérance de la variable aléatoire <span class="math">\(L\)</span>.</p></li>
-</ul>
-</div>
-<div id="question-3-1" class="section level5">
-<h5>Question 3</h5>
-<p>En fait, le modèle est imparfait et il existe une probabilité <span class="math">\(\epsilon&gt;0\)</span> pour qu’un but soit <a href="https://es.wikipedia.org/wiki/La_mano_de_Dios">marqué de la main</a>.</p>
-<ul>
-<li>Quelle est la probabilité d’observer au moins un but marqué de la main lors d’une partie ?</li>
-</ul>
+<p><em>Indication :</em> On appliquera la <a href="https://fr.wikipedia.org/wiki/Formule_des_probabilit%C3%A9s_totales">formule des probabilités totales</a> deux fois de suite (en prenant pour mesure de référence une mesure de probabilité conditionnelle).</p>
 <hr />
 </div>
 </div>
