--- a/html/CM6.html
+++ b/html/CM6.html
@@ -136,9 +136,9 @@ $(document).ready(function () {
 </div>
 <div id="variance-dune-somme" class="section level5">
 <h5>Variance d’une somme</h5>
-<p>Soient <span class="math">\(X\)</span> et <span class="math">\(Y\)</span> deux variables intégrables. Nous avons</p>
+<p>Nous avons</p>
 <p><span class="math">\[
- {\rm Var}(X + Y)  =  {\rm Var}(X) +  {\rm Var}(Y) + 2{\rm Cov}[X,Y]
+ {\rm Var}[X + Y]  =  {\rm Var}[X] +  {\rm Var}[Y] + 2{\rm Cov}[X,Y]
 \]</span></p>
 </div>
 <div id="independance" class="section level5">
@@ -156,7 +156,7 @@ $(document).ready(function () {
 <div id="loi-des-grands-nombres" class="section level5">
 <h5>Loi des <a href="https://fr.wikipedia.org/wiki/Loi_des_grands_nombres">grands nombres</a></h5>
 <p>Soient <span class="math">\(X_1, X_2, ...\)</span> sont des variables indépendantes et de même loi, alors <span class="math">\[
-{\rm P}( | \sum_i^n X_i/n - {\rm E}[X]| &gt; \epsilon ) \to 0. 
+{\rm P}( | \frac{1}n  \sum_i^n X_i - {\rm E}[X]| &gt; \epsilon ) \to 0. 
 \]</span></p>
 </div>
 </div>
