--- a/html/CM1.html
+++ b/html/CM1.html
@@ -121,7 +121,7 @@ $(document).ready(function () {
 
 <hr />
 <div id="axiome-des-probabilites" class="section level4">
-<h4>Axiome des probabilités</h4>
+<h4><a href="https://francoio.github.io/">Axiome des probabilités</a></h4>
 <p>En <a href="https://fr.wikipedia.org/wiki/Probabilit%C3%A9">théorie des probabilités</a>, l’ensemble des éventualités <span class="math">\(\Omega\)</span> est appelé l’<em>ensemble fondamental</em>. En général, on ne le décrit pas. Cet ensemble est muni d’une <a href="https://fr.wikipedia.org/wiki/Tribu_(math%C3%A9matiques)">tribu</a> <span class="math">\({\cal A}\)</span> contenant sous-ensembles de <span class="math">\(\Omega\)</span> appelés <em>événements</em>.</p>
 <hr />
 <div id="mesure-de-probabilite" class="section level5">
