--- a/html/CM2.html
+++ b/html/CM2.html
@@ -121,7 +121,7 @@ $(document).ready(function () {
 
 <hr />
 <div id="loi-geometrique-et-loi-binomiale" class="section level4">
-<h4>Loi géométrique et loi binomiale</h4>
+<h4><a href="https://francoio.github.io/">Loi géométrique et loi binomiale</a></h4>
 <div id="loi-geometrique" class="section level5">
 <h5>Loi géométrique</h5>
 <p>Lors d’une suite infinie d’épreuves identiques et indépendantes, on s’intéresse à l’instant, <span class="math">\(X\)</span>, de <strong>première occurrence</strong> d’un événement de probabilité <span class="math">\(p\)</span>.</p>
