--- a/html/CM3.html
+++ b/html/CM3.html
@@ -120,8 +120,8 @@ $(document).ready(function () {
 
 
 <hr />
-<div id="definition-de-lesperance-mathematique-dune-variable-aleatoire" class="section level4">
-<h4>Définition de l’espérance mathématique d’une variable aléatoire</h4>
+<div id="esperance-dune-variable-aleatoire" class="section level4">
+<h4><a href="https://francoio.github.io/">Espérance d’une variable aléatoire</a></h4>
 <div id="variable-de-bernoulli-ou-variable-indicatrice" class="section level5">
 <h5>Variable de Bernoulli (ou variable indicatrice)</h5>
 <p>On note <span class="math">\(\mathbb{1}_A\)</span> la variable aléatoire égale à 1 si <span class="math">\(A\)</span> se réalise, 0 sinon.</p>
@@ -147,7 +147,7 @@ $(document).ready(function () {
 <hr />
 </div>
 </div>
-<div id="esperance-dune-variable-aleatoire" class="section level4">
+<div id="esperance-dune-variable-aleatoire-1" class="section level4">
 <h4>Espérance d’une variable aléatoire</h4>
 <ul>
 <li>Soit <span class="math">\(X&gt;0\)</span> et <span class="math">\(X_n\)</span> une suite de variables étagées qui converge en croissant vers <span class="math">\(X\)</span>. Par définition, nous avons</li>
