--- a/html/CM4.html
+++ b/html/CM4.html
@@ -121,7 +121,7 @@ $(document).ready(function () {
 
 <hr />
 <div id="variables-aleatoires-de-loi-discrete" class="section level4">
-<h4>Variables aléatoires de loi discrète</h4>
+<h4><a href="https://francoio.github.io/">Variables aléatoires de loi discrète</a></h4>
 <p>Une variable aléatoire de loi discrète est une variable aléatoire à valeurs dans un ensemble fini ou dénombrable, typiquement tout ou une partie de l’ensemble des entiers naturels, <span class="math">\(\mathbb{N}\)</span>.</p>
 <p>Soit <span class="math">\(X\)</span> une variable aléatoire à valeurs dans <span class="math">\(\mathbb{N}\)</span>. La loi de <span class="math">\(X\)</span> est caractérisée par la donnée <span class="math">\[
 {\rm P}(X = n) = p_n \, , \quad n \geq 0. 
