--- a/html/CM8.html
+++ b/html/CM8.html
@@ -121,7 +121,7 @@ $(document).ready(function () {
 
 <hr />
 <div id="couples-de-variables-aleatoires" class="section level4">
-<h4>Couples de variables aléatoires</h4>
+<h4><a href="https://francoio.github.io/">Couples de variables aléatoires</a></h4>
 <p>Soient <span class="math">\(X\)</span> et <span class="math">\(Y\)</span> deux variables aléatoires réelles.</p>
 <div id="densite-de-probabilite" class="section level5">
 <h5>Densité de probabilité</h5>
