--- a/markdown/2016-7-12-TD-9.html
+++ b/markdown/2016-7-12-TD-9.html
@@ -123,22 +123,135 @@ $(document).ready(function () {
 <div id="questions-de-cours" class="section level4">
 <h4><a href="http://francoio.github.io/html/CM8.html">Questions de cours</a></h4>
 <ul>
-<li>Rappeler la définition de la loi d’un couple de variable aléatoires admettant une densité de probabilité</li>
+<li><p>Rappeler la définition de la loi d’un couple de variable aléatoires réelles admettant une densité de probabilité.</p></li>
+<li><p>Rappeler la définition des lois marginales et conditionnelles d’un couple de variables aléatoires réelles.</p></li>
+<li><p>Rappeler le principe de simulation d’un couple de variables aléatoires réelles.</p></li>
 </ul>
 <hr />
 <div id="exercice-1" class="section level5">
 <h5>Exercice 1</h5>
-<p>Soit <span class="math">\(U\)</span> et <span class="math">\(V\)</span> deux variables al?atoires ind?pendantes de loi uniforme sur <span class="math">\((0,1)\)</span>. Le but de ce probl`eme est de montrer que les variables al?atoires <span class="math">\((1 + U)\sqrt{V}\)</span> et <span class="math">\(U + V\)</span> ont m?me loi (sans calculer cette loi).</p>
-
-<p>\begin{itemize} On consid?re <span class="math">\(X = \min (U,V)\)</span> et <span class="math">\(Y = \max (U,V)\)</span>. Calculer la covariance du couple <span class="math">\((X,Y)\)</span>. Les variables <span class="math">\(X\)</span> et <span class="math">\(Y\)</span> sont elles ind?pendantes~? (Justifier)</p>
-
-<p>Soit <span class="math">\(B\)</span> un ensemble mesurable de <span class="math">\(\mathbb{R}^2\)</span>. En consid?rant les ?v?nements <span class="math">\(A = (U &lt; V)\)</span> et <span class="math">\(\bar{A}\)</span>, montrer que <span class="math">\[
-{\rm P}( (X,Y) \in B ) = 2 \int \!\!\!\! \int_B \un_{ \{0 &lt; u &lt; v &lt; 1\} } du dv.  
-\]</span> En d?duire que la densit? jointe du couple <span class="math">\((X,Y)\)</span> est ?gale ? <span class="math">\[
-f(x,y) = 2 \un_{D} (x,y) \, ,\quad \, D = \{ (x, y) \in \mathbb{R}^2 \,, \; 0 &lt; x &lt; y &lt; 1 \}. 
-\]</span> Soit <span class="math">\(y \in (0,1)\)</span>. Calculer la densit? de la loi de <span class="math">\(Y\)</span> et montrer que la loi conditionnelle de <span class="math">\(X\)</span> sachant <span class="math">\(Y = y\)</span> est uniforme sur <span class="math">\((0, y)\)</span>. Montrer que le couple <span class="math">\((X,Y)\)</span> admet la m?me loi que le couple <span class="math">\((U\sqrt{V}, \sqrt{V})\)</span>. D?duire de la question pr?c?dente que les variables al?atoires <span class="math">\((1 + U)\sqrt{V}\)</span> et <span class="math">\(U + V\)</span> ont m?me loi. Montrer (directement) que la densit? de la variable <span class="math">\(U + V\)</span> est ?gale ? <span class="math">\[
-g(z) = z \un_{(0,1)}(z) + (2 - z) \un_{(1,2)}(z)  \, , \quad z \in \mathbb{R} \, .
+<p>La durée d’autonomie de la batterie du portable d’Abdel est en moyenne 2.3 fois plus élevée que celle du portable de Hanneke. On suppose que les deux durées suivent une loi exponentielle et sont mutuellement indépendantes.</p>
+<hr />
+</div>
+<div id="question-1" class="section level5">
+<h5>Question 1</h5>
+<ul>
+<li>Calculer la probabilité pour que le portable d’Abdel se décharge avant celui d’Hanneke.</li>
+</ul>
+<hr />
+</div>
+<div id="question-2" class="section level5">
+<h5>Question 2</h5>
+<ul>
+<li>Vérifier ce résultat à l’aide d’une simulation.</li>
+</ul>
+<pre class="r"><code>lambda = 1.0
+mean(rexp(1000000, rate = lambda) &gt; rexp(1000000, rate = lambda/2.3))</code></pre>
+<pre><code>## [1] 0.303203</code></pre>
+<hr />
+</div>
+<div id="exercice-2" class="section level5">
+<h5>Exercice 2</h5>
+<p>Hanneke et Abdel se sont donnés rendez-vous entre 19h et 20h. Leurs instants respectifs d’arrivée au point de rencontre sont deux variables aléatoires indépendantes de loi uniforme sur <span class="math">\((0,1)\)</span> (unité h). Hanneke et Abdel n’aiment pas attendre, et ils quitteront le lieu de rencontre après 10 minutes d’attente infructueuse, ou après 20h.</p>
+<hr />
+</div>
+<div id="question-1-1" class="section level5">
+<h5>Question 1</h5>
+<ul>
+<li><p>Calculer la probabilité pour que le rendez-vous soit réussi.</p></li>
+<li><p>Vérifier ce résultat à l’aide d’une simulation.</p></li>
+</ul>
+<pre class="r"><code>mean(abs(runif(100000) - runif(100000)) &lt; 1/6)</code></pre>
+<pre><code>## [1] 0.30695</code></pre>
+<hr />
+</div>
+<div id="question-2-1" class="section level5">
+<h5>Question 2</h5>
+<ul>
+<li><p>Même question lorsque la loi des instants d’arrivée est la loi <a href="https://fr.wikipedia.org/wiki/Loi_b%C3%AAta">beta</a>(<span class="math">\(n\)</span>,<span class="math">\(n\)</span>), (<span class="math">\(n = 4, 10, 20,\dots\)</span>).</p></li>
+<li><p>Tracer un graphe de décrivant la probabilité de rencontre en fonction de la variance de cette loi.</p></li>
+</ul>
+<hr />
+</div>
+<div id="exercice-4" class="section level5">
+<h5>Exercice 4</h5>
+<p>Soit <span class="math">\(U\)</span> et <span class="math">\(V\)</span> deux variables aléatoires indépendantes de loi uniforme sur <span class="math">\((0,1)\)</span>. Le but de ce problème est de déterminer la loi de la variable aléatoire <span class="math">\(X= UV\)</span>.</p>
+<hr />
+</div>
+<div id="question-1-2" class="section level5">
+<h5>Question 1</h5>
+<p>On considère le couple de variables aléatoires <span class="math">\((X,Y)\)</span> = <span class="math">\((U, UV)\)</span>.</p>
+<ul>
+<li><p>Soit <span class="math">\(x \in (0,1)\)</span>. Déterminer la densité de la loi conditionnelle de <span class="math">\(Y\)</span> sachant <span class="math">\(X = x\)</span>.</p></li>
+<li><p>Montrer que la loi du couple <span class="math">\((X,Y)\)</span> admet la densité de probabilité suivante :</p></li>
+</ul>
+<p><span class="math">\[
+\forall (x,y) \in \mathbb{R}^2 , \quad f(x,y) = \frac{1}x \mathbb{1}_{0&lt;y&lt;x&lt;1} (x,y) 
 \]</span></p>
+<ul>
+<li>En déduire la loi marginale de la variable <span class="math">\(Y = UV\)</span>.</li>
+</ul>
+<hr />
+</div>
+<div id="question-2-2" class="section level5">
+<h5>Question 2</h5>
+<p>On souhaite montrer le résultat plus directement, à l’aide d’une formule de conditionnement. Soit <span class="math">\(t \in (0,1)\)</span>.</p>
+<ul>
+<li><p>Montrer que <span class="math">\[
+{\rm P}(Y \leq t) =  \int_0^1 {\rm P}(V \leq t/x ) dx = t - t \ln t.
+\]</span></p></li>
+<li><p>En déduire que</p></li>
+</ul>
+<p><span class="math">\[
+\forall y \in (0,1) \, , \quad f_Y(y) = - \ln(y) .
+\]</span></p>
+</div>
+<div id="exercice-6" class="section level5">
+<h5>Exercice 6</h5>
+<p>Soit <span class="math">\(U\)</span> et <span class="math">\(V\)</span> deux variables aléatoires indépendantes de loi uniforme sur <span class="math">\((0,1)\)</span>. Le but de ce problème est de montrer que les variables aléatoires <span class="math">\((1 + U)\sqrt{V}\)</span> et <span class="math">\(U + V\)</span> ont même loi, sans toutefois calculer cette loi.</p>
+<hr />
+</div>
+<div id="question-1-3" class="section level5">
+<h5>Question 1</h5>
+<p>On considère les variables aléatoires <span class="math">\(X = \min (U,V)\)</span> et <span class="math">\(Y = \max (U,V)\)</span>.</p>
+<ul>
+<li>Calculer la covariance du couple <span class="math">\((X,Y)\)</span>. Les variables <span class="math">\(X\)</span> et <span class="math">\(Y\)</span> sont-elles indépendantes ? (Justifier)</li>
+</ul>
+<hr />
+</div>
+<div id="question-2-3" class="section level5">
+<h5>Question 2</h5>
+<p>Soit <span class="math">\(B\)</span> un sous-ensemble mesurable de <span class="math">\(\mathbb{R}^2\)</span>. On considère l’événement <span class="math">\(A = (U &lt; V)\)</span> et son complémentaire, <span class="math">\(\bar{A}\)</span>.</p>
+<ul>
+<li>Montrer que</li>
+</ul>
+<p><span class="math">\[
+{\rm P}( (X,Y) \in B ) = 2 \int \!\!\!\! \int_B \mathbb{1}_{ \{0 &lt; u &lt; v &lt; 1\} } du dv.  
+\]</span></p>
+<ul>
+<li>En déduire que la densité jointe du couple <span class="math">\((X,Y)\)</span> est égale à</li>
+</ul>
+<p><span class="math">\[
+f(x,y) = 2 \mathbb{1}_{D} (x,y) \, ,\quad \, D = \{ (x, y) \in \mathbb{R}^2 \,, \; 0 &lt; x &lt; y &lt; 1 \}. 
+\]</span></p>
+<hr />
+</div>
+<div id="question-3" class="section level5">
+<h5>Question 3</h5>
+<p>Soit <span class="math">\(y \in (0,1)\)</span>.</p>
+<ul>
+<li><p>Calculer la densité de la loi de <span class="math">\(Y\)</span>.</p></li>
+<li><p>Montrer que la loi conditionnelle de <span class="math">\(X\)</span> sachant <span class="math">\(Y = y\)</span> est uniforme sur <span class="math">\((0, y)\)</span>.</p></li>
+<li><p>Montrer que le couple <span class="math">\((X,Y)\)</span> admet la même loi que le couple <span class="math">\((U\sqrt{V}, \sqrt{V})\)</span>.</p></li>
+</ul>
+<hr />
+</div>
+<div id="question-4" class="section level5">
+<h5>Question 4</h5>
+<p>Soit <span class="math">\(y \in (0,1)\)</span>.</p>
+<ul>
+<li>Déduire de la question précédente que les variables aléatoires <span class="math">\((1 + U)\sqrt{V}\)</span> et <span class="math">\(U + V\)</span> ont même loi.</li>
+</ul>
 </div>
 </div>
 
