--- a/_posts/2016-7-12-TD-9.html
+++ b/_posts/2016-7-12-TD-9.html
@@ -147,22 +147,22 @@ $(document).ready(function () {
 </ul>
 <pre class="r"><code>lambda = 1.0
 mean(rexp(1000000, rate = lambda) &gt; rexp(1000000, rate = lambda/2.3))</code></pre>
-<pre><code>## [1] 0.303203</code></pre>
+<pre><code>## [1] 0.302659</code></pre>
 <hr />
 </div>
 <div id="exercice-2" class="section level5">
 <h5>Exercice 2</h5>
-<p>Hanneke et Abdel se sont donnés rendez-vous entre 19h et 20h. Leurs instants respectifs d’arrivée au point de rencontre sont deux variables aléatoires indépendantes de loi uniforme sur <span class="math">\((0,1)\)</span> (unité h). Hanneke et Abdel n’aiment pas attendre, et ils quitteront le lieu de rencontre après 10 minutes d’attente infructueuse, ou après 20h.</p>
+<p>Hanneke et Abdel se sont <a href="https://www.ted.com/talks/hannah_fry_the_mathematics_of_love?language=fr">donnés rendez-vous</a> entre 19h et 20h. Leurs instants respectifs d’arrivée au point de rencontre sont deux variables aléatoires indépendantes de loi uniforme sur <span class="math">\((0,1)\)</span> (unité h). Hanneke et Abdel n’aiment pas attendre, et ils quitteront le lieu de rencontre après 10 minutes d’attente infructueuse, ou après 20h.</p>
 <hr />
 </div>
 <div id="question-1-1" class="section level5">
 <h5>Question 1</h5>
 <ul>
-<li><p>Calculer la probabilité pour que le rendez-vous soit réussi.</p></li>
+<li><p>Calculer la probabilité pour que Hanneke et Abdel se rencontrent effectivement entre 19h et 20h.</p></li>
 <li><p>Vérifier ce résultat à l’aide d’une simulation.</p></li>
 </ul>
 <pre class="r"><code>mean(abs(runif(100000) - runif(100000)) &lt; 1/6)</code></pre>
-<pre><code>## [1] 0.30695</code></pre>
+<pre><code>## [1] 0.30739</code></pre>
 <hr />
 </div>
 <div id="question-2-1" class="section level5">
@@ -175,10 +175,43 @@ mean(rexp(1000000, rate = lambda) &gt; rexp(1000000, rate = lambda/2.3))</code><
 </div>
 <div id="exercice-4" class="section level5">
 <h5>Exercice 4</h5>
-<p>Soit <span class="math">\(U\)</span> et <span class="math">\(V\)</span> deux variables aléatoires indépendantes de loi uniforme sur <span class="math">\((0,1)\)</span>. Le but de ce problème est de déterminer la loi de la variable aléatoire <span class="math">\(X= UV\)</span>.</p>
+<p>Soit <span class="math">\(X\)</span> et <span class="math">\(Y\)</span> deux variables aléatoires indépendantes de loi exponentielle de paramètres respectifs <span class="math">\(1\)</span> et <span class="math">\(2\)</span>.</p>
 <hr />
 </div>
 <div id="question-1-2" class="section level5">
+<h5>Question 1</h5>
+<ul>
+<li>Montrer que la loi du couple <span class="math">\((X,Y)\)</span> admet la densité de probabilité suivante :</li>
+</ul>
+<p><span class="math">\[
+\forall (x,y) \in \mathbb{R}^2 , \quad f(x,y) = 2 e^{-2y-x} \mathbb{1}_{\mathbb{R}_+^2} (x,y) .
+\]</span></p>
+<hr />
+</div>
+<div id="question-2-2" class="section level5">
+<h5>Question 2</h5>
+<p>On considère la variable aléatoire <span class="math">\(Z = X + Y\)</span>. Soit <span class="math">\(t \geq 0\)</span>.</p>
+<ul>
+<li><p>Montrer que <span class="math">\[
+{\rm P}(Z \leq t) =  (1 - e^{-t})^2 .
+\]</span></p></li>
+<li><p>Calculer l’espérance de <span class="math">\(Z\)</span>.</p></li>
+</ul>
+<hr />
+</div>
+<div id="question-3" class="section level5">
+<h5>Question 3</h5>
+<ul>
+<li>Calculer l’espérance de <span class="math">\(T = XY\)</span>.</li>
+</ul>
+<hr />
+</div>
+<div id="exercice-4-1" class="section level5">
+<h5>Exercice 4</h5>
+<p>Soit <span class="math">\(U\)</span> et <span class="math">\(V\)</span> deux variables aléatoires indépendantes de loi uniforme sur <span class="math">\((0,1)\)</span>. Le but de ce problème est de déterminer la loi de la variable aléatoire <span class="math">\(X= UV\)</span>.</p>
+<hr />
+</div>
+<div id="question-1-3" class="section level5">
 <h5>Question 1</h5>
 <p>On considère le couple de variables aléatoires <span class="math">\((X,Y)\)</span> = <span class="math">\((U, UV)\)</span>.</p>
 <ul>
@@ -193,7 +226,7 @@ mean(rexp(1000000, rate = lambda) &gt; rexp(1000000, rate = lambda/2.3))</code><
 </ul>
 <hr />
 </div>
-<div id="question-2-2" class="section level5">
+<div id="question-2-3" class="section level5">
 <h5>Question 2</h5>
 <p>On souhaite montrer le résultat plus directement, à l’aide d’une formule de conditionnement. Soit <span class="math">\(t \in (0,1)\)</span>.</p>
 <ul>
@@ -205,13 +238,14 @@ mean(rexp(1000000, rate = lambda) &gt; rexp(1000000, rate = lambda/2.3))</code><
 <p><span class="math">\[
 \forall y \in (0,1) \, , \quad f_Y(y) = - \ln(y) .
 \]</span></p>
+<hr />
 </div>
 <div id="exercice-6" class="section level5">
 <h5>Exercice 6</h5>
 <p>Soit <span class="math">\(U\)</span> et <span class="math">\(V\)</span> deux variables aléatoires indépendantes de loi uniforme sur <span class="math">\((0,1)\)</span>. Le but de ce problème est de montrer que les variables aléatoires <span class="math">\((1 + U)\sqrt{V}\)</span> et <span class="math">\(U + V\)</span> ont même loi, sans toutefois calculer cette loi.</p>
 <hr />
 </div>
-<div id="question-1-3" class="section level5">
+<div id="question-1-4" class="section level5">
 <h5>Question 1</h5>
 <p>On considère les variables aléatoires <span class="math">\(X = \min (U,V)\)</span> et <span class="math">\(Y = \max (U,V)\)</span>.</p>
 <ul>
@@ -219,7 +253,7 @@ mean(rexp(1000000, rate = lambda) &gt; rexp(1000000, rate = lambda/2.3))</code><
 </ul>
 <hr />
 </div>
-<div id="question-2-3" class="section level5">
+<div id="question-2-4" class="section level5">
 <h5>Question 2</h5>
 <p>Soit <span class="math">\(B\)</span> un sous-ensemble mesurable de <span class="math">\(\mathbb{R}^2\)</span>. On considère l’événement <span class="math">\(A = (U &lt; V)\)</span> et son complémentaire, <span class="math">\(\bar{A}\)</span>.</p>
 <ul>
@@ -236,7 +270,7 @@ f(x,y) = 2 \mathbb{1}_{D} (x,y) \, ,\quad \, D = \{ (x, y) \in \mathbb{R}^2 \,, 
 \]</span></p>
 <hr />
 </div>
-<div id="question-3" class="section level5">
+<div id="question-3-1" class="section level5">
 <h5>Question 3</h5>
 <p>Soit <span class="math">\(y \in (0,1)\)</span>.</p>
 <ul>
