--- a/_posts/2016-7-8-Test-2.html
+++ b/_posts/2016-7-8-Test-2.html
@@ -120,7 +120,7 @@ $(document).ready(function () {
 
 
 <hr />
-<p>Le <a href="https://github.com/francoio/francoio.githib.io/Rmd/Formulaire-Test-2-Prénom-Nom.md">formulaire de réponse</a> à déposer dans TEIDE est disponible sur GitHub.</p>
+<p>Le formulaire de réponse <a href="https://github.com/francoio/francoio.github.io">Formulaire-Test-2-Prénom-Nom.md</a> à compléter et à déposer dans TEIDE.</p>
 <hr />
 <div id="probleme-1" class="section level4">
 <h4>Problème 1</h4>
